--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ deploy:
   provider: pypi
   user: jared.bunting
   password:
-    secure: hdSrfuFW47uWqWdiD9smJEQuhvCq4+ae90VX1mP7n5FtLoTcgSNsEM6sI1l3PaAqkX/fXX9heMqtYWL8wf3JF6PX3WYqeCwFID7Tl9hAYx2ECLywkajJ1tfyUCsEMJG8SE+rDwKjdPUf7sMQ9BRRbNJaq63vCM2+5hu3mU/qMyY=
+    secure: SrJio/n7v6WzLAcU4Y3LpQHlK/xwiZT0zRcZMywrGdbywwxAIfvlNG0bNs+3C+q58dlfl5dQmSQ+HgxQcZTt0Jb5/54DFVVdnBfBybAmR1C8Hgx0i5a0T7H9LUKRBRqg2EoIRznjEmsVEd2w4KcPMMehja19Qgiw9r6kmycO86U=
+  allow_failure: false
   on:
     tags: true
     all_branches: true
